--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-tailwindcss": "^1.1.11",
+    "react-native-webview": "^13.6.4",
+    "react-native-youtube-iframe": "^2.3.0",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
