--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
@@ -22,11 +23,11 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-webview": "^13.6.4",
-    "react-native-youtube-iframe": "^2.3.0",
-    "tailwindcss": "^3.4.0"
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
